@startuml

abstract class Command{
    # id:Int
    # receiver:Receiver
    + {abstract} execute()
}

interface Receiver{
    + {abstract}execute()
}

class ConcreteCommand{
    + execute()
}

class ConcreteReceiver{
    + action()
}

class Invoker{
    - commands:List<Command>
    + execute()
}

class Main

Command <|-left- ConcreteCommand
Receiver <|.. ConcreteReceiver

ConcreteCommand o-- Receiver
Invoker o-- Command

Main o-left- Receiver

note left of Invoker
    commandを保持
    commandが複数、多種類ある場合は
    Invokerからcommandを起動する
end note

@enduml